--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
 </head>
 
 <body>
-  <div class="col-1 header">
-
-  </div>
-  <div class="col-2 main">
-    <div class="col-3 box-sedan">
+  <div class="main">
+    <div class="col box-sedan">
       <img src="images/icon-sedans.svg" alt="icon-sedans">
       <h1>SEDANS</h1>
       <p class="content-text">
@@ -25,7 +22,7 @@
       </p>
       <a class="btn btn-sedan" href="#">Learn More</a>
     </div>
-    <div class="col-4 box-suv">
+    <div class="col box-suv">
       <img src="images/icon-suvs.svg" alt="icon-suvs">
       <h1>SUVS</h1>
       <p class="content-text">
@@ -34,7 +31,7 @@
       </p>
       <a class="btn btn-suv" href="#">Learn More</a>
     </div>
-    <div class="col-5 box-luxury">
+    <div class="col box-luxury">
       <img src="images/icon-luxury.svg" alt="icon-luxury">
       <h1>LUXURY</h1>
       <p class="content-text">
@@ -44,9 +41,9 @@
       <a class="btn btn-luxury" href="#">Learn More</a>
     </div>
   </div>
-  <div class="col-6 disclaimer">
-    <p class="disclaimer">Challenge by<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">tegaspermana</a>.</p>
+  <div class="disclaimer">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/tegaspermana">Tegas Permana</a>.
   </div>
 
 </body>
